syntax = "proto3";
package gameMessageCore;
option go_package = "./messageGo/proto";


import "entityProfile.proto";

enum NFTType{
  NFTTypeUnknown = 0;
  NFTTypeConsumable = 1;
  NFTTypeEquipment = 2;
  NFTTypeMaterial = 3;
  NFTTypePlaceable = 4;
  NFTTypeThird = 5;
  NFTTypeWearable = 6;
}

// NFT品质
enum NFTRarity{
  NFTRarityUnknown = 0; // 无
  NFTRarityCommon  = 1; // 普通 common
  NFTRarityRare    = 2; // 稀有 rare
  NFTRarityEpic    = 3; // 史诗 epic
  NFTRarityMythic  = 4; // 神话 mythic
  NFTRarityUnique  = 5; // 唯一 unique
}

// 消耗品作用类型
enum NFTConsumableType{
  NFTConsumableTypeRestoreHP = 0;
  NFTConsumableTypeLearnRecipe = 1;
  NFTConsumableTypeAddBuff = 2;
  NFTConsumableTypeOccupyLand = 3;
}

// 消耗品
message NFTConsumableInfo{
  string quality = 1;
  NFTConsumableType consumable_type = 2;
  int32  value = 3;
}


message NftSkill{
  int32  skill_id = 1;
  int32  skill_level = 2;
}

// 第三方NFT道具信息
message NftThirdNftInfo{
  string name = 1;
  // 显示资源URL
  string res_url = 2;
  // 描述信息
  string desc  = 3;
  // 放置过期时间
  int32  time_out_sec = 4;
  // token (address)
  string token_url = 5;
  // token Id
  string token_id = 6;
}

// 装备类NFT道具信息
message NftWearableInfo{
  string      token    = 1;
  int32       object_cid = 2;
  NFTRarity   wearable_rarity = 3;
}

enum ItemType{
  // 游戏道具
  ItemTypeGame=0;
  // 放置类NFT
  ItemTypeNFT=1;
}

// 装备属性(保存的是增量-实际数据 = 增量 + 配置数据)
message AvatarAttribute{
  // 稀有度 unique,  mythic, epic, rare, common
  string rarity = 1;
  // 耐久度
  int32 durability = 2;
  // 属性数据
  repeated AttributeData data = 3;
}

 

// 玩家装备位置
enum AvatarPosition {
  // 没有装备位置
  AvatarPositionNone = 0;
  // 头盔
  AvatarPositionHead = 1;
  // 上衣
  AvatarPositionCoat = 2;
  // 裤子
  AvatarPositionPant = 3;
  // 鞋子
  AvatarPositionShoe = 4;
  // 手
  AvatarPositionHand = 5;
  // 饰品
  AvatarPositionAccessory = 6;
  // 武器
  AvatarPositionWeapon = 7;

  // 时装装备位置相对于装备位置偏移量
  AppearancePosOffset          = 10;
  // 时装头盔
  AvatarPositionAppearanceHead = 11;
  // 时装上衣
  AvatarPositionAppearanceCoat = 12;
  // 时装裤子
  AvatarPositionAppearancePant = 13;
  // 时装鞋子
  AvatarPositionAppearanceShoe = 14;
  // 时装手
  AvatarPositionAppearanceHand = 15;
  // 时装武器
  AvatarPositionAppearanceWeapon = 17;
}

message NftMetadata{
  string                  name = 1;
  string                  description = 2;
  string                  image = 3;
  string                  backGroundColor = 4;
  repeated AttributeData  attributes = 5;
}

message NftData{
  string      network = 1;
  string      tokenId = 2;
  bool        isMelandAi = 3;
  NftMetadata metadata = 4;
}

// 道具
message Item {
  ItemType        itemType = 1;
  string          id = 2;
  int32           object_cid = 3;  // 对应的 objectId,
  int32           num = 4;
  int64           userId = 5;  
  AvatarPosition  avatarPos = 9;
  // nft资产如果建造在地图中了此时 nft_using = true
  bool            nftUsing = 10;
  // NFT data  
  NftData         nftData = 11;
  // nft 过期时间
  int32           nftTimeOutSec = 12; 
}

message ItemBaseInfo {
  int32       cid = 1;
  int32       num = 2;
  int32       quality = 3;
}


// 玩家装备
message PlayerAvatar {
  // 装备位置
  AvatarPosition position = 1;
  // 装备的物品 id
  int32 object_id = 2;
  // 属性
  AvatarAttribute attribute = 3;
}

